# Amazon_RAG

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: categories.json  showcase.json
scratch/: test_memory.py
src/rag_pipeline/: chunker.py  embedder.py  pipeline.py  preprocess.py
tests/: test_pipeline.py
