[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_pipeline"
version = "0.1.0"
description = "RAG Pipeline Local Library"
dependencies = [
    "qdrant-client",
    "sentence-transformers",
    "langchain-groq",
    "langchain",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["src"]
